--- a/fundamentos-estadisticos/libros/12_introduccion-bayesiana.ipynb
+++ b/fundamentos-estadisticos/libros/12_introduccion-bayesiana.ipynb
@@ -27,7 +27,7 @@
    "id": "16923358-25c0-4f86-bde9-5b66a7d84432",
    "metadata": {},
    "source": [
-    "# Introducción\n",
+    "# Parte 1\n",
     "\n",
     "Revisa el ejercicio introductorio a inferencia bayesiana, experimenta con los valores y contesta:"
    ]
@@ -218,77 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "adaf6960-03b6-4b99-8dfd-8fd42f4d94cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>moneda</th>\n",
-       "      <th>theta</th>\n",
-       "      <th>proba_inicial</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   moneda  theta  proba_inicial\n",
-       "0       1    0.4            0.5\n",
-       "1       2    0.6            0.5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "volados = 2\n",
-    "theta = np.array([0.4,0.6])\n",
-    "\n",
-    "probs_inicial = pd.DataFrame(data=[1,2], columns=['moneda'])\n",
-    "probs_inicial['theta'] = theta\n",
-    "probs_inicial['proba_inicial'] = [0.5,0.5]\n",
-    "probs_inicial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ce9c5017-cb18-4b0e-9738-8094e4059ae0",
+   "id": "0bcb1c50-6765-4f44-aca3-e753e41e29b3",
    "metadata": {},
    "outputs": [
     {
@@ -349,12 +279,20 @@
        "1       2    0.6            0.5     0.16             0.08        0.307692"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "volados = 2\n",
+    "theta = np.array([0.4,0.6])\n",
+    "\n",
+    "probs_inicial = pd.DataFrame(data=[1,2], columns=['moneda'])\n",
+    "probs_inicial['theta'] = theta\n",
+    "probs_inicial['proba_inicial'] = [0.5,0.5]\n",
+    "\n",
+    "\n",
     "soles = 0\n",
     "get_verosim = lambda df: binom.pmf(k=soles, n=volados, p=df['theta'])\n",
     "\n",
@@ -384,78 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0669a7bb-ef61-4e3e-8ac7-e0cd3bad9e44",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>moneda</th>\n",
-       "      <th>theta</th>\n",
-       "      <th>proba_inicial</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   moneda  theta  proba_inicial\n",
-       "0       1    0.4            0.5\n",
-       "1       2    0.6            0.5"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "volados = 10\n",
-    "theta = np.array([0.4,0.6])\n",
-    "\n",
-    "probs_inicial = pd.DataFrame(data=[1,2], columns=['moneda'])\n",
-    "probs_inicial['theta'] = theta\n",
-    "probs_inicial['proba_inicial'] = [0.5,0.5]\n",
-    "probs_inicial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e4a9be42-afc3-449e-85b6-6ca26a457f79",
+   "execution_count": 6,
+   "id": "43e0c335-ed18-4130-97dd-db596be0d67e",
    "metadata": {},
    "outputs": [
     {
@@ -516,12 +384,20 @@
        "1       2    0.6            0.5  0.120932         0.060466        0.919294"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "volados = 10\n",
+    "theta = np.array([0.4,0.6])\n",
+    "\n",
+    "probs_inicial = pd.DataFrame(data=[1,2], columns=['moneda'])\n",
+    "probs_inicial['theta'] = theta\n",
+    "probs_inicial['proba_inicial'] = [0.5,0.5]\n",
+    "\n",
+    "\n",
     "soles = 8\n",
     "get_verosim = lambda df: binom.pmf(k=soles, n=volados, p=df['theta'])\n",
     "\n",
@@ -545,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e75f9c22-3e7d-4f37-8398-deaf1e7e65cb",
    "metadata": {},
    "outputs": [
@@ -607,7 +483,7 @@
        "1       2    0.6            0.5  0.000105         0.000052        0.017046"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,11 +521,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "435f87bd-aced-44ae-bb5b-3008a9c9eae9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>moneda</th>\n",
+       "      <th>theta</th>\n",
+       "      <th>proba_inicial</th>\n",
+       "      <th>verosim</th>\n",
+       "      <th>verosim_inicial</th>\n",
+       "      <th>prob_posterior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.144</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.036</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   moneda  theta  proba_inicial  verosim  verosim_inicial  prob_posterior\n",
+       "0       1    0.4            0.9     0.16            0.144             0.8\n",
+       "1       2    0.6            0.1     0.36            0.036             0.2"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volados = 2\n",
+    "theta = np.array([0.4,0.6])\n",
+    "\n",
+    "probs_inicial = pd.DataFrame(data=[1,2], columns=['moneda'])\n",
+    "probs_inicial['theta'] = theta\n",
+    "probs_inicial['proba_inicial'] = [0.9,0.1]\n",
+    "\n",
+    "\n",
+    "soles = 2\n",
+    "get_verosim = lambda df: binom.pmf(k=soles, n=volados, p=df['theta'])\n",
+    "\n",
+    "probs_inicial['verosim'] = probs_inicial.apply(get_verosim, axis=1)\n",
+    "probs_inicial['verosim_inicial'] = probs_inicial['proba_inicial'] * probs_inicial['verosim']\n",
+    "probs_inicial['prob_posterior'] = probs_inicial['verosim_inicial'] / probs_inicial['verosim_inicial'].sum()\n",
+    "\n",
+    "probs_inicial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9abbefd-3a41-4c1b-9bcc-b161d932671a",
+   "metadata": {},
+   "source": [
+    "Con respecto al ejercicio inicial, aumentar la probabilidad de la moneda 1 a 0.9 no genera ninguna diferencia en la verosimilitud $P(X|\\theta)$. Sin embargo, en la verosimilitud inicial $P(X|\\theta)P(\\theta)$ la moneda 1 es significativamente más verosimil que la moneda 2, lo cual provoque que la moneda con mayor porbabilidad de haber generado el experimento es la moneda 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c062fd6-c496-43f3-8052-b2d4a11973c2",
+   "metadata": {},
+   "source": [
+    "## Parte 2\n",
+    "Justifica las siguientes aseveraciones para este ejemplo.\n",
+    "* Las probabilidades posteriores o finales son una especie de punto intermedio entre verosimilitud y probabilidades iniciales."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4ff25f53-aec4-40f6-8e7e-8d39c7a84c8e",
+   "id": "3178ba3e-d1d6-4d7d-87ad-34f304304115",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "0"
+   ]
   }
  ],
  "metadata": {
