--- a/fundamentos-estadisticos/libros/12_introduccion-bayesiana.ipynb
+++ b/fundamentos-estadisticos/libros/12_introduccion-bayesiana.ipynb
@@ -622,17 +622,21 @@
    "source": [
     "## Parte 2\n",
     "Justifica las siguientes aseveraciones para este ejemplo.\n",
-    "* Las probabilidades posteriores o finales son una especie de punto intermedio entre verosimilitud y probabilidades iniciales."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3178ba3e-d1d6-4d7d-87ad-34f304304115",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0"
+    "* Las probabilidades posteriores o finales son una especie de punto intermedio entre verosimilitud y probabilidades iniciales.\n",
+    "<br>Esto se debe a que como se define a la probabilidad posterior  como:\n",
+    "$$\\frac{P(X|\\theta)P(\\theta)}{\\sum P(X|\\theta_i)P(\\theta_i)}$$\n",
+    "Entonces se ve que se pondera la verosimilitud con la probabilidad inicial, y después se normaliza con la suma de todas las verosimilitudes iniciales. Con lo que, para el ejemplo en el que se tienen únicamente 2 monedas, el denominador de la prob. posterior suma el efecto de 2 monedas, lo cual resulta en una especie de valor medio.\n",
+    "\n",
+    "* Si tenemos pocas observaciones, las probabilidades posteriores son similares a las iniciales.\n",
+    "<br>Si se tienen pocas observaciones en una distribución binomial, el cociente:\n",
+    "$$\\frac{P(X|\\theta)}{P(X)}\\approx 1$$\n",
+    "Porque si $n$ es pequeña, entonces $P(X)\\rightarrow P(X|\\theta)$\n",
+    "\n",
+    "* Cuando tenemos muchos datos, las probabilidades posteriores están más concentradas, y no es tan importante la inicial.\n",
+    "<br>Cuando tenemos muchos datos, entonces la probabilidad total de $P(X)$ tiende al valor de las probabilidades inciales. Con lo que las probabilidades poteriores tienden al valor de la verosimilitud.\n",
+    "\n",
+    "* Si la inicial está muy concentrada en algún valor, la posterior requiere de muchas observaciones para que se pueda concentrar en otros valores diferentes a los de la inicial.\n",
+    "<br>Esto es debido a que si $P(\\theta)$ es grande o chica, entonces va a dominar sobre la verosimilitud hacia el valor hacia el que está concentrada. Con lo que, si se desea probar que el experimento se desarrolló con la moneda contraria, entonces sería necesario hacer que la verosimilitud sea mucho más importante para lo cual son necesarias más observaciones."
    ]
   }
  ],
